# local-code-knowledge-graph

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
examples/: basic_usage.py  watch_example.py
src/ckg/: __init__.py
src/ckg/cli/: __init__.py  main.py
src/ckg/graph/: __init__.py  models.py  store.py  traversal.py
src/ckg/indexing/: __init__.py  git_tracker.py  indexer.py
src/ckg/mcp/: __init__.py  server.py
src/ckg/parsing/: __init__.py  base.py  go_parser.py  manager.py  python_parser.py  rust_parser.py  typescript_parser.py
src/ckg/query/: __init__.py  engine.py  vector_store.py
src/ckg/watch/: __init__.py  watcher.py
tests/: __init__.py  test_graph.py  test_indexer.py  test_parsing.py
