[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ckg"
version = "0.1.0"
description = "Local Code Knowledge Graph - Privacy-first Graph RAG for codebases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Phoenix Assistant", email = "phoenix@phoenixai.dev" }
]
keywords = [
    "code-analysis",
    "knowledge-graph",
    "rag",
    "tree-sitter",
    "mcp",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "networkx>=3.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "watchdog>=3.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all-languages = [
    "tree-sitter-java>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "tree-sitter-php>=0.21.0",
]

[project.scripts]
ckg = "ckg.cli.main:cli"

[project.urls]
Homepage = "https://github.com/phoenix-assistant/local-code-knowledge-graph"
Documentation = "https://github.com/phoenix-assistant/local-code-knowledge-graph#readme"
Repository = "https://github.com/phoenix-assistant/local-code-knowledge-graph"
Issues = "https://github.com/phoenix-assistant/local-code-knowledge-graph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ckg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
